<resources>
    <string name="app_name">EXAMPLES_Animations</string>
    <string name="detailsActivity">This is the details Activity</string>
    <string name="drawbaleOrRevealHide">Drawbale and Reveal/Hide Anim</string>
    <string name="show_details">Show Details</string>
    <string name="animate_drawaable_title">Animate drawable graphics Using </string>
    <string name="AnimationDrawable">AnimationDrawable</string>
    <string name="AnimatedVectorDrawable">AnimatedVectorDrawable</string>

    <string name="RevealOrhide">Reveal or hide a view using animation</string>
    <string name="circulaReveal">circular reveal</string>
    <string name="crossfade">click to see crossfade</string>
    <string name="cardflip">CLICK ON THE CARD BELOW TO SEE CARD FLIP ANIM</string>
    <string name="crossfadeText">Crossfade animations (also known as dissolve) gradually fade out one View or ViewGroup while simultaneously fading in another. This animation is useful for situations where you want to switch content or views in your app. The crossfade animation shown here uses ViewPropertyAnimator, which is available for Android 3.1 (API level 12) and higher.</string>
    <string name="circulaRevealText">Reveal animations provide users visual continuity when you show or hide a group of UI elements. The ViewAnimationUtils.createCircularReveal() method enables you to animate a clipping circle to reveal or hide a view. This animation is provided in the ViewAnimationUtils class, which is available for Android 5.0 (API level 21) and higher.</string>
    <string name="cardflipText" />
    <string name="card_back_title">Card Back Side</string>
    <string name="card_back_description">In order to create the card flip animation, you need a total of four animators. Two animators for when the front of the card animates out and to the left and in and from the left. You also need two animators for when the back of the card animates in and from the right and out and to the right.</string>
    <string name="description_image_1">Card Flip Animation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Reveal">Reveal</string>
    <string name="RevealTitle">click Reveal or Hide</string>
    <string name="Hide">Hide</string>
    <string name="MoveViewWithAnimation">Move a View with Animation</string>
    <string name="MoveViewsUsingFlingAnimation">Move views using fling animation</string>

    <string name="moveViewWithFlingAnimation">Move views using a fling animation</string>
    <string name="enlargeViewWithZoomAnimation">Enlarge a view using a zoom animation</string>
    <string name="animateMovementWithSpringAnimation">Animate movement using spring physics</string>
    <string name="ChangeViewPositionWithObjectAnimator">Change the view position with ObjectAnimator</string>
    <string name="ChangeViewPositionCurvedWithPathInterpolator">Change the view position (curved motion) with PathInterpolator</string>
    <string name="curverMotion">click to see image move in curved motion</string>
    <string name="straightMotionBtn">click to see image move in straight motion</string>
    <string name="description_zoom_touch_close">zoom image</string>
    <string name="AutoAnimateLayoutUpdates">Auto animate layout updates</string>
    <string name="AnimateLayoutChangesUsingTransition">Animate layout changes using a transition</string>
    <string name="Createcustomtransitionanimation">Create a custom transition animation</string>
    <string name="StartActivityUsingAnimation1">Start an activity using an animation</string>
    <string name="StartActivityUsingAnimation2">Start an activity 2 using an animation</string>

    <string name="plus">plus</string>
    <string name="text">Click to see text animate</string>
    <string name="textForAnim">Text to show auto Animation on textView</string>
    <string name="SlideBetweenFragmentsUsingViewPager">Slide between fragments using ViewPager</string>
    <string name="SlideBetweenFragmentsUsingViewPager2">Slide between fragments using ViewPager2</string>
    InstructiveMotion
    <string name="InstructiveMotion">Instructive Motion Example</string>

    <string name="image_header">%1$s by %2$s</string>
    <string name="scene">Scene</string>
    <string name="scene_1">1</string>
    <string name="scene_2">2</string>
    <string name="scene_3">3</string>
    <string name="scene_4">4</string>
    <string name="additional_message_in"> This message fades in </string>
    <string name="additional_message_inout"> This message fades in out </string>
    <string name="sharedImageResource">sharedImageResource</string>
    <string name="VincentDan1992">Vincent Dan, 1992</string>
    <string name="bacon_ipsum">
        Bacon ipsum dolor sit amet venison shankle pork chop meatball tri-tip beef ribs turducken.
        Strip steak ball tip boudin shank, turducken leberkas pork chop beef ribs ham hock sausage
        frankfurter prosciutto doner ham. Bacon landjaeger ball tip, andouille chuck beef ribs jowl
        kevin tri-tip turkey biltong frankfurter sausage. Boudin pork belly meatloaf chicken cow
        tri-tip kielbasa shoulder. Pork loin pig boudin hamburger pastrami short ribs. Sirloin
        tongue pork loin chicken spare ribs bresaola pastrami.\n\n
        Tenderloin turducken pork chop, pork belly beef ribs brisket ham. Turducken landjaeger short
        loin capicola pancetta pork chop strip steak rump meatloaf brisket kevin doner short ribs
        salami. Beef prosciutto flank leberkas landjaeger swine. Fatback prosciutto sausage, jerky
        tail tongue hamburger jowl biltong shank pork belly swine filet mignon chicken ground round.
        Pork chop porchetta ground round tri-tip tail t-bone.\n\n
        Landjaeger rump bacon salami sausage pork loin pig brisket strip steak corned beef. Biltong
        sirloin meatloaf ribeye, bresaola cow chicken t-bone frankfurter andouille strip steak jerky
        capicola. Ribeye porchetta strip steak boudin. Kielbasa cow brisket pastrami ball tip
        tenderloin bresaola ham. Biltong andouille chuck ham hock jerky beef chicken, flank shankle
        ball tip venison porchetta kevin fatback kielbasa. Boudin tongue ground round, turkey pork
        belly salami corned beef pork tri-tip meatloaf sausage andouille strip steak pig. Spare ribs
        beef meatloaf rump sausage doner frankfurter.\n\n
        Fatback porchetta pork loin meatball, turducken pork chop drumstick boudin. Kevin tri-tip
        ground round corned beef, ribeye swine filet mignon salami pork spare ribs pork chop
        brisket. Filet mignon shankle t-bone bacon. Turducken capicola turkey porchetta kielbasa
        shank pork loin jerky venison tenderloin boudin ham hock ground round.</string>
</resources>