<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoveViewWithAnimationActivity"
    android:layout_margin="@dimen/margin">

    <Button
        android:id="@+id/drawbaleOrRevealHide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/drawbaleOrRevealHide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:backgroundTint="@color/purple_200"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/MoveViewWithAnimation"/>

    <Button
        android:id="@+id/MoveViewWithAnimation"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drawbaleOrRevealHide"
        android:text="@string/MoveViewWithAnimation"
        app:layout_constraintBottom_toTopOf="@id/moveViewWithFlingAnimation"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:backgroundTint="@color/purple_200"/>

    <Button
        android:id="@+id/moveViewWithFlingAnimation"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MoveViewWithAnimation"
        android:text="@string/moveViewWithFlingAnimation"
        app:layout_constraintBottom_toTopOf="@id/enlargeViewWithZoomAnimation"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:backgroundTint="@color/purple_200"/>

    <Button
        android:id="@+id/enlargeViewWithZoomAnimation"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moveViewWithFlingAnimation"
        android:text="@string/enlargeViewWithZoomAnimation"
        app:layout_constraintBottom_toTopOf="@id/animateMovementWithSpringAnimation"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:backgroundTint="@color/purple_200"/>

    <Button
        android:id="@+id/animateMovementWithSpringAnimation"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enlargeViewWithZoomAnimation"
        android:text="@string/animateMovementWithSpringAnimation"
        app:layout_constraintBottom_toTopOf="@id/AutoAnimateLayoutUpdates"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:backgroundTint="@color/purple_200"/>

    <Button
        android:id="@+id/AutoAnimateLayoutUpdates"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animateMovementWithSpringAnimation"
        android:text="@string/AutoAnimateLayoutUpdates"
        app:layout_constraintBottom_toTopOf="@id/AnimateLayoutChangesUsingTransition"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:backgroundTint="@color/purple_200"/>

    <Button
        android:id="@+id/AnimateLayoutChangesUsingTransition"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AutoAnimateLayoutUpdates"
        android:text="@string/AnimateLayoutChangesUsingTransition"
        app:layout_constraintBottom_toTopOf="@id/Createcustomtransitionanimation"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:backgroundTint="@color/purple_200"/>

    <Button
        android:id="@+id/Createcustomtransitionanimation"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AnimateLayoutChangesUsingTransition"
        android:text="@string/Createcustomtransitionanimation"
        app:layout_constraintBottom_toTopOf="@id/StartActivityUsingAnimations"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:backgroundTint="@color/purple_200"/>

    <Button
        android:id="@+id/StartActivityUsingAnimations"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Createcustomtransitionanimation"
        android:text="@string/StartActivityUsingAnimation1"
        app:layout_constraintBottom_toTopOf="@id/SlideBetweenFragmentsUsingViewPager"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:backgroundTint="@color/purple_200"/>

    <Button
        android:id="@+id/SlideBetweenFragmentsUsingViewPager"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StartActivityUsingAnimations"
        app:layout_constraintBottom_toTopOf="@id/SlideBetweenFragmentsUsingViewPager2"
        android:text="@string/SlideBetweenFragmentsUsingViewPager"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:backgroundTint="@color/purple_200"/>

    <Button
        android:id="@+id/SlideBetweenFragmentsUsingViewPager2"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_200"
        android:text="@string/SlideBetweenFragmentsUsingViewPager2"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SlideBetweenFragmentsUsingViewPager" />

    <!--<Button
        android:id="@+id/InstructiveMotion"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SlideBetweenFragmentsUsingViewPager2"
        android:text="@string/InstructiveMotion"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:backgroundTint="@color/purple_200"/>
-->
</androidx.constraintlayout.widget.ConstraintLayout>