<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructiveMotionActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="400dp"/>

        <ScrollView
            android:id="@+id/mScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="400dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff"
                android:elevation="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/InstructiveMotion"
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/VincentDan1992"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bacon_ipsum"/>


            </LinearLayout>

        </ScrollView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>