<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ChangeViewPositionWithObjectAnimator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ChangeViewPositionWithObjectAnimator"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Panel"
        android:gravity="bottom|center"
        app:layout_constraintBottom_toTopOf="@+id/shapeableImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/straightMotionBtn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/straightMotionBtn"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/shapeableImageView"
        app:layout_constraintTop_toBottomOf="@id/ChangeViewPositionWithObjectAnimator" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_height="@dimen/height"
        android:layout_width="@dimen/height"
        android:layout_marginLeft="@dimen/margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/straightMotionBtn"
        android:src="@drawable/scene1"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        android:layout_marginTop="@dimen/margin2"/>

    <TextView
        android:id="@+id/ChangeViewPositionCurvedWithPathInterpolator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ChangeViewPositionCurvedWithPathInterpolator"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Panel"
        android:gravity="bottom|center"
        app:layout_constraintTop_toBottomOf="@id/shapeableImageView"
        app:layout_constraintBottom_toTopOf="@id/ChangeViewPositionCurvedWithPathInterpolator_shapeableImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin"/>

    <Button
        android:id="@+id/curverMotionBtn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/curverMotion"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ChangeViewPositionCurvedWithPathInterpolator" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ChangeViewPositionCurvedWithPathInterpolator_shapeableImageView"
        android:layout_width="@dimen/height"
        android:layout_height="@dimen/height"
        android:scaleType="centerCrop"
        android:src="@drawable/scene2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/curverMotionBtn"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        android:layout_marginTop="@dimen/margin2"/>
</androidx.constraintlayout.widget.ConstraintLayout>